@startuml
class Livre {
  - id: int
  - titre: String
  - auteur: Auteur
  - categorie: Catégorie
  - isbn: String
  - dateParution: int
  - nombrePages: int
  - format: String
  - exemplaireDisponible: Stock
  + afficherUnLivre(): Array
  + afficherTousLesLivres(): Array
  + afficherLesLivresParTitre(): Array
  + afficherLesLivresParAuteur(): Array
  + afficherLesLivresParCatégorie(): Array
  + afficherLesLivresParISBN(): Array
  + afficherLesLivresParDateParution(): Array
  + afficherLesLivresDisponibles(): Array
  + ajouterLivre(): void
  + modifierLivre(): void
  + supprimerLivre(): void
}

class Auteur {
  - id: int
  - nom: String
  - prenom: String
  - nombreOeuvre:Livre
  - dateNaissance: Date
  - nationalite: String
  - biographi:Text
  + modifierAuteur():void
  + supprimerAuteur():void
  + ajouterAuteur():void
  + afficherAuteurs():array
  + afficherToutAuteurs():array
  }

class Catégorie {
  - id: int
  - nom: String
  - description: String
  + modifierCategorie():void
  + afficherLesCategories():Array
  + afficherUneCategorie(): Array
  + ajouterCategorie():void
  + supprimerCategorie():void
}

class Commande {
  - id: int
  - client: Client
  - livre: Livre
  - dateDebut: Date
  - dateRetour : Date
  - statut: Bool
  + ajouterCommande(): void
  + validerCommande(): void
  + annulerCommande(): void
  + modifierCommande(): void
}

class Client {
  - id: int
  - nom: String
  - prenom: String
  - adresse: String
  - email: String
  - telephone: String
  - ville: String
  + AjouterClient(): void
  + modifierClient():void
  + SupprimerClient(): void
  + passerCommande(livre: Livre):void
  + retourCommande(livre: Livre):void
  + afficherLesClients():array
  + afficherUnClient():array
  + AfficheCommandes(): array
  + AffichelivresEmpruntes(): array
}

class Utilisateur {
  - id: int
  - nom: String
  - email: String
  - tel: String
  - motDePasse: String
  + seConnecter(): void
  + seDeconnecter(): void
  + creerCompte(): void
  + editCompte(): void
  + supprCompte(): void
}

class Stock {
  - livre: Livre
  - quantité: int
  + ajouterLivre(livre: Livre, quantité: int)
  + retirerLivre(livre: Livre, quantité: int)
}

Livre "1" *-- "1" Auteur : écrit par
Livre "1" *-- "1" Catégorie : catégorisé par
Commande "0..*" -- "1" Client : effectuée par
Utilisateur <|-- Client
Utilisateur o-- Commande
Stock "1" *-- "1" Livre : contient

@enduml
